--- a/HTML5 y CSS3/Mi primera página web/contacto.html
+++ b/HTML5 y CSS3/Mi primera página web/contacto.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="caja">
-            <h1><img src="/imagenes/logo.png"></h1>
+            <h1><img src="/imagenes/logo.png" alt="Logo de la barbería Alura"></h1>
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
@@ -23,47 +23,69 @@
     <main class="contacto">
         <form>
             <label for="nombreApellido">Nombre y apellido</label>
-            <input type="text" id="nombreApellido" class="input-padre">
+            <input type="text" id="nombreApellido" class="input-padre" required>
 
             <label for="correoElectronico">Correo electrónico</label>
-            <input type="email" id="correoElectronico" class="input-padre">
+            <input type="email" id="correoElectronico" class="input-padre" required placeholder="email@dominio.com">
 
             <label for="telefono">Teléfono</label>
-            <input type="tel" id="telefono" class="input-padre">
+            <input type="tel" id="telefono" class="input-padre" required placeholder="+(xx) xxx xxxxxxx">
 
             <label for="mensaje">Mensaje</label>
-            <textarea cols="70" rows="10" id="mensaje" class="input-padre"></textarea>
+            <textarea cols="70" rows="10" id="mensaje" class="input-padre" required></textarea>
 
-            <div>
+            <fieldset>
 
-                <p>¿Cómo le gustaría que lo contactemos?</p>
+                <legend>¿Cómo le gustaría que lo contactemos?</legend>
 
                 <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email"> Email</label>
 
                 <label for="radio-telefono"><input type="radio" name="contacto" value="telefono" id="radio-telefono"> Teléfono</label>
                 
-                <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"> WhatsApp</label>
+                <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp" checked> WhatsApp</label>
                 
-            </div>
+            </fieldset>
 
-            <div>
+            <fieldset>
 
-                <p>¿En cuál horario prefiere ser atendido?</p>
+                <legend>¿En cuál horario prefiere ser atendido?</legend>
                 <select>
                     <option>Manñana</option>
                     <option>Tarde</option>
                     <option>Noche</option>
                 </select>
 
-            </div>
+            </fieldset>
 
             <label class="checkbox"><input type="checkbox">¿Le gustaría recibir novedades de la barbería Alura?</label>
 
-            <input type="submit" value="Enviar formulario">
+            <input type="submit" value="Enviar formulario" class="enviar">
         </form>
+        <table>
+            <thead>
+                <tr>
+                    <th>Día</th>
+                    <th>Horario</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lunes</td>
+                    <td>08h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Miércoles</td>
+                    <td>08h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Viernes</td>
+                    <td>08h ~ 20h</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
-        <img src="/imagenes/logo-blanco.png">
+        <img src="/imagenes/logo-blanco.png" alt="Logo de la barbería Alura">
         <p class="copyright">&copy Copyright Barbería Alura-2024</p>
     </footer>    
 </body>
