--- a/HTML5 y CSS3/Mi primera página web/index.html
+++ b/HTML5 y CSS3/Mi primera página web/index.html
@@ -5,41 +5,57 @@
         <meta charset="UTF-8">
         <title>Barbería Alura</title>
         <link rel="stylesheet" href="/reset.css"/>
-        <link rel="stylesheet" href="style-home.css"/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
 
     <body>
 
         <header>
-            <h1 class="tituloPrincipal">Barbería Alura</h1>
+            <div class="caja">
+                <h1><img src="/imagenes/logo.png" alt="Logo de la barbería Alura"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/productos.html">Productos</a></li>
+                        <li><a href="/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
-        <img id="banner" src="/banner/banner.jpg"/>
+        <img class="banner" src="/banner/banner.jpg"/>
+        <main>
+            <section class="principal">
 
-        <div class="principal">
+                <h2 class="tituloPrincipal">Sobre la Barbería Alura</h2>
 
-            <h2 class="tituloCentralizado">Sobre la Barbería Alura</h2>
+                <img class="utencilios" src="/imagenes/utensilios[1].jpg" alt="Utencilios de un barbero">
 
-            <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
+                <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p> 
 
-            <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
+                <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
 
-            <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+                <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
 
-        </div>
+            </section>
 
-        <div class="diferenciales">
+            <section class="diferenciales">
 
-            <h3 class="tituloCentralizado">Diferenciales</h3>
+                <h3 class="tituloPrincipal">Diferenciales</h3>
 
-            <ul>
-                <li class="items">Atención personalizada a los clientes</li>
-                <li class="items">Espacio diferenciado</li>
-                <li class="items">Localización</li>
-                <li class="items">Profesionales calificados</li>
-            </ul>
-            <img class="imagenDiferenciales" src="/diferenciales/diferenciales.jpg"/>
-        </div>
+                <ul>
+                    <li class="items">Atención personalizada a los clientes</li>
+                    <li class="items">Espacio diferenciado</li>
+                    <li class="items">Localización</li>
+                    <li class="items">Profesionales calificados</li>
+                </ul>
+                <img class="imagenDiferenciales" src="/diferenciales/diferenciales.jpg"/>
+            </section>
+        </main>
+        <footer>
+            <img src="/imagenes/logo-blanco.png" alt="Logo de la barbería Alura">
+            <p class="copyright">&copy Copyright Barbería Alura-2024</p>
+        </footer>
 
     </body>
 </html>
