--- a/HTML5 y CSS3/Mi primera página web/index.html
+++ b/HTML5 y CSS3/Mi primera página web/index.html
@@ -6,6 +6,9 @@
         <title>Barbería Alura</title>
         <link rel="stylesheet" href="/reset.css"/>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&family=Sofia&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -38,6 +41,11 @@
                 <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
 
             </section>
+            <section class="mapa">
+                <h3 class="tituloPrincipal">Nuestra ubicación</h3>
+                <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4079777269444!2d-46.637213025712484!3d-23.589697062631846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bd9bb943bf5%3A0x6f642995c970f0fe!2scaelum%20alura!5e0!3m2!1ses-419!2sco!4v1709261659727!5m2!1ses-419!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
 
             <section class="diferenciales">
 
@@ -51,6 +59,9 @@
                 </ul>
                 <img class="imagenDiferenciales" src="/diferenciales/diferenciales.jpg"/>
             </section>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=G5upc1yMnL144v86" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </main>
         <footer>
             <img src="/imagenes/logo-blanco.png" alt="Logo de la barbería Alura">
