--- a/HTML5 y CSS3/Mi primera página web/index.html
+++ b/HTML5 y CSS3/Mi primera página web/index.html
@@ -3,6 +3,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Barbería Alura</title>
         <link rel="stylesheet" href="/reset.css"/>
         <link rel="stylesheet" href="style.css"/>
@@ -28,6 +29,7 @@
 
         <img class="banner" src="/banner/banner.jpg"/>
         <main>
+            
             <section class="principal">
 
                 <h2 class="tituloPrincipal">Sobre la Barbería Alura</h2>
@@ -44,24 +46,32 @@
             <section class="mapa">
                 <h3 class="tituloPrincipal">Nuestra ubicación</h3>
                 <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4079777269444!2d-46.637213025712484!3d-23.589697062631846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bd9bb943bf5%3A0x6f642995c970f0fe!2scaelum%20alura!5e0!3m2!1ses-419!2sco!4v1709261659727!5m2!1ses-419!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="mapaContenido">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4079777269444!2d-46.637213025712484!3d-23.589697062631846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bd9bb943bf5%3A0x6f642995c970f0fe!2scaelum%20alura!5e0!3m2!1ses-419!2sco!4v1709261659727!5m2!1ses-419!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
 
             <section class="diferenciales">
 
                 <h3 class="tituloPrincipal">Diferenciales</h3>
 
-                <ul>
+                <div class="contenidoDiferenciales">
+                <ul class="listaDiferenciales">
                     <li class="items">Atención personalizada a los clientes</li>
                     <li class="items">Espacio diferenciado</li>
                     <li class="items">Localización</li>
                     <li class="items">Profesionales calificados</li>
-                </ul>
-                <img class="imagenDiferenciales" src="/diferenciales/diferenciales.jpg"/>
+                    <li class="items">Puntualidad</li>
+                    <li class="items">Limpieza</li>
+                </ul><img class="imagenDiferenciales" src="/diferenciales/diferenciales.jpg"/>
+                </div>
+
+                <div class="video">
+                    <iframe width=100% height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=G5upc1yMnL144v86" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
             </section>
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=G5upc1yMnL144v86" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+
         </main>
         <footer>
             <img src="/imagenes/logo-blanco.png" alt="Logo de la barbería Alura">
